--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="calculator.css">
-    <title>Calculator</title>
+    <title>Simple Calculator Made with JavaScript and CSS</title>
 </head>
 <body>
     
